--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.6)
-project(tkcgi)
-add_definitions(-DTK_DLL)
+project(cppcgi)
+add_definitions(-DCGI_DLL)
 #include_directories(include)
 #link_directories(lib)
 aux_source_directory(. SRC_LIST)
-#target_link_libraries(tkcgi libmysql)
-add_library(tkcgi SHARED ${SRC_LIST})
+#target_link_libraries(cppcgi libmysql)
+add_library(cppcgi SHARED ${SRC_LIST})
