split function of class String have not trimmed by default result in a bug for upload file failed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,5 @@
 cmake_minimum_required(VERSION 2.6)
-project(cppcgi)
+project(cgicpp)
 add_definitions(-DCGI_DLL)
-#include_directories(include)
-#link_directories(lib)
 aux_source_directory(. SRC_LIST)
-#target_link_libraries(cppcgi libmysql)
-add_library(cppcgi SHARED ${SRC_LIST})
+add_library(cgicpp SHARED ${SRC_LIST})
